# c-mdn-standard-streams-redirection

./: CMakeLists.txt  CMakePresets.json  Dockerfile
cmake/: utils.cmake
configurations/: clang_tidy.yml  mdn_standard_streams_redirection_config.h.in
src/: CMakeLists.txt
src/standard_streams_redirection/: CMakeLists.txt  standard_streams_redirection.c
src/standard_streams_redirection/include/: standard_streams_redirection.h
src/standard_streams_redirection/include/mdn/: standard_streams_redirection.h
test/: CMakeLists.txt
test/standard_streams_redirection_test/: CMakeLists.txt  standard_streams_redirection_test.cpp
